--- a/style.css
+++ b/style.css
@@ -1,13 +1,5 @@
-:root{
-    /* CSS HEX */
---Azulescuro: #03045eff;
---verde: rgb(30, 182, 0);
---vermelho: rgb(207, 36, 36);
---Azulclaro: #90e0efff;
-}
-
 body{
-    background-color: var(--Azulescuro);
+    background-color: aliceblue;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,6 +12,7 @@ main{
     margin: 20px 0;
     text-align: center;
     max-width: 90%;
+    color: rgb(red, green, blue);
 }
 
 button{
